--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ body {
     gap: 20px;
 }
 
+/* Képek */
+.card-img {
+    width: 100%;
+    aspect-ratio: 2 / 1;     /* A képek kb. kétszer olyan szélesek, mint magasak */
+    object-fit: cover;       /* nyújtás helyett levágjuk a kilógó részeket */
+    display: block;
+    border-radius: 12px;
+}
+
 /* MAIN CONTAINER */
 .container {
     display: grid;
@@ -79,7 +88,7 @@ body {
 
 .price .old {
     text-decoration: line-through;
-    color: #777;
+    color: #494949;
     margin-left: 10px;
 }
 
@@ -111,7 +120,7 @@ body {
     color: white;
 }
 
-/* RESPONSIVE BREAKPOINTS */
+/* A reszponzív töréspontok: 576px, 768px, 992px. */
 @media (min-width: 576px) {
     .container {
         grid-template-columns: 1fr;
