--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
     margin-bottom: 10px;
 }
 
-/* COLORS */
+/* Színek */
 .card-white {
     background: #ffffff;
 }
@@ -137,4 +137,25 @@ body {
     .container {
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+/* NAVBAR linkek (nem home) */
+.navbar nav a {
+    color: #9aa4ad;      /* szürke */
+    transition: color 0.2s;
+}
+
+.navbar nav a:hover {
+    color: white;
+}
+
+/* home link */
+.navbar nav #home {
+    color: white;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
 }
